# gameOfLife

./: CMakeLists.txt  README.md
mapData/: gridData.txt  output.txt
src/: Cell.cpp  Cell.h  Coordinate.h  Display.cpp  Display.h  Game.cpp  Game.h  main.cpp
